--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
             <div class="contact_info"></div>
 
             <!--Googleフォーム-->
-            <div class="contact_form">
-                <iframe class="contact_form_google"
+            <div class="contact_form container">
+                <iframe class="contact_form_google responsive_iframe"
                     src="https://docs.google.com/forms/d/e/1FAIpQLSc-ecnZ3KyBMpNw3OFHb58-w3FqSbkNG8SycvU07Z8HmtYYlA/viewform?embedded=true"
                     width="640" height="2700" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
             </div>
