--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <li class="top__contents_item">
                         <img src="images/F14Ge4ZaQAAlJzK.jpeg" alt="">
                     </li>
+                    <li class="top__contents_item">
+                        <img src="images/F14Ge4ZaQAAlJzK.jpeg" alt="">
+                    </li>
                 </ul>
             </div>
         </div>
